--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,26 @@
   text-align: center;
 }
 
+.misconception-button {
+    display: flex;
+    justify-content: space-between;
+    width: 40rem;
+}
+
+.misconception-text {
+    width: 40rem;
+}
+
+.chevron {
+  width: 1.5rem;
+  height: 1.5rem;
+  transition: transform 0.25s ease;
+}
+
+.chevron.open {
+  transform: rotate(180deg);
+}
+
 .speed-slider {
     display: flex;
     flex-direction: column;
