fixed width for vegan misconception

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,9 @@
 }
 
 .misconception-text {
-    width:100%;
+    max-width: 30rem;
+    margin: 1rem auto;
+    overflow-wrap: break-word;
 }
 
 .chevron {
